<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue"
    tools:context=".ui.UserLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:layout_marginStart="32dp"
            android:textStyle="bold"
            android:text="@string/welcome_back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:text="@string/login_to_continue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="32dp"
                android:text="@string/email"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_icon"/>

                <EditText
                    android:text="virajbaraiya1998@gmail.com"
                    android:id="@+id/etEmaillogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:background="@null"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginStart="32dp"
                    android:hint="@string/enter_email"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorCream"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="32dp"
                android:text="@string/master_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_master_password_icon"/>

                <EditText
                    android:inputType="textPassword"
                    android:text="viraj12345"
                    android:id="@+id/etPasswordlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14sp"
                    android:background="@null"
                    android:layout_marginStart="32dp"
                    android:hint="@string/enter_password"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorCream"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:background="@drawable/textview_border"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="#3C2C5C"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="32dp"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>