<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.AddElectionCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imgCloseec"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="end">

            <ImageView
                android:id="@+id/imgAccount"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/nopath" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtwifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gilroysemi"
        android:text="@string/election_card"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/gilroy"
                    android:text="@string/title"
                    android:textColor="@color/colorTitleText"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/etTitleec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:text="Election Card"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/gilroysemi"
                    android:padding="16dp"
                    android:textColor="@color/colorTitleText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/gilroy"
                    android:text="@string/full_name"
                    android:textColor="@color/colorTitleText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etEmailec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/gilroysemi"
                    android:hint="@string/write_here_fullname"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/colorTitleText"
                    android:textColorHint="@color/border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/gilroy"
                    android:text="@string/electioncard_number"
                    android:textColor="@color/colorTitleText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etElectionCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/edit_text_border"
                    android:fontFamily="@font/gilroysemi"
                    android:hint="@string/write_here_electioncard_number"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/colorTitleText"
                    android:textColorHint="@color/border"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/gilroy"
                    android:text="@string/notes"
                    android:textColor="@color/colorTitleText"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_border"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etNoteec"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="12dp"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/write_here_note"
                        android:textColor="@color/colorTitleText"
                        android:textColorHint="@color/border"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSaveec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/colorButton"
                    android:padding="16dp"
                    android:shadowColor="@color/colorBlack"
                    android:text="@string/save"
                    android:textColor="@color/colorBlack" />

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>