<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.SettingActivity">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btnLogout"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_onboard"
                android:contentDescription="TODO">

            </ImageView>



        </LinearLayout>

    </RelativeLayout>
<RelativeLayout

    android:layout_margin="25dp"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_above="@+id/tvLogin"
        android:layout_marginBottom="10dp"
        android:id="@+id/tvCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/create_an_account"
        android:textColor="#3C2C5C"
        android:textSize="14sp" />

    <TextView

        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/textview_login_border"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sign_in"
        android:textColor="#ffffff"
        android:textSize="14sp" />


</RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="14dp"
        android:gravity="center"

        android:text="@string/terms_and_conditions_privacy_policy"
        android:textColor="#b7b7b7"
        android:textSize="14sp" />

</FrameLayout>





